# rag-for-private-banking

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ontology.yaml  pyproject.toml
docs/: RM_Assistant_RAG_spec.md  TECHNICAL_REPORT.md
docs/experiments/: coverage_map.md  kg_experiment.md  kg_sensitivity.md  rerank_eval.md  rerank_sensitivity.md  router_eval.md  scoreboard.md  semantic_eval.md  semantic_stability.md  semrepr_eval.md
docs/retros/: 2026-06-18-phase3.md  2026-06-19-substrate-validation-and-reorg.md
rm_assistant/: config.py  db.py  ontology.py
rm_assistant/etl/: berka.py  build_unified.py  unified_schema.sql
rm_assistant/eval/: judge.py  metrics.py  queryset.py  runner.py  scoreboard.py
rm_assistant/kgx/: __init__.py  kuzu_loader.py  oracles.py  questions.py  report.py  runner.py  score.py  solvers.py
rm_assistant/models/: anthropic.py  base.py  codex.py  factory.py  ollama.py
rm_assistant/rerankx/: __init__.py  hardset.py  report.py  reranker.py  runner.py
rm_assistant/retrieval/: c360.py  router.py  semantic.py  sql_pillar.py  vector_pillar.py
rm_assistant/routerx/: __init__.py  report.py  runner.py
rm_assistant/semrepr/: __init__.py  catalog.py  dbt_repr.py  equivalence.py  rdf_repr.py  report.py
rm_assistant/semx/: __init__.py  extract.py  questions.py  report.py  runner.py
rm_assistant/synth/: facts.py  notes.py  style_seeds.json
tests/: test_eval.py  test_kgx.py  test_rerankx.py  test_retrieval.py  test_router.py  test_routerx.py  test_semrepr.py  test_semx.py  test_smoke.py  test_wealthgraph.py
(+37 files in other folders)
