[project]
name = "rm-assistant"
version = "0.1.0"
description = "Wealth / private-banking RM Copilot — RAG architecture comparison prototype"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",       # Ollama HTTP client
    "pymysql>=1.1",      # ETL source: CTU public Berka MariaDB
    "chromadb>=0.5",     # vector store (Phase-2 pillar A)
    "python-dotenv>=1.0",
    "faker>=30",         # deterministic synthesis of names/companies/profiles
    "pyyaml>=6",         # ontology.yaml
    "networkx>=3.2",     # in-memory canonical graph + GraphML export + traversal
    "kuzu>=0.10",        # embedded property-graph DB + Cypher (KG experiment)
    "rdflib>=7.6.0",
]

[project.optional-dependencies]
hosted = ["anthropic>=0.40"]  # optional: hosted Claude as the "smart" LLM role
rerank = ["FlagEmbedding>=1.3", "torch>=2.2", "transformers<5"]  # cross-encoder (bge-reranker-v2-m3); FlagEmbedding 1.4 needs transformers 4.x

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rm_assistant"]
